--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIF 클리커 웹게임</title>
+    <title>다중 자동 클리커 클리커 게임</title>
     <style>
         body {
             display: flex;
@@ -18,7 +18,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            width: 400px;
+            width: 500px;
             height: 100vh;
             padding: 20px;
             box-sizing: border-box;
@@ -29,15 +29,15 @@
         }
         .button-area {
             position: relative;
-            width: 300px;
-            height: 300px;
+            width: 400px;
+            height: 400px;
             margin: auto;
         }
         #clickButton {
             width: 200px;
             height: 200px;
             border-radius: 50%;
-            background-color: red;
+            background-color: #4CAF50;
             border: none;
             color: white;
             font-size: 24px;
@@ -52,11 +52,11 @@
         #clickButton:active {
             transform: translate(-50%, -50%) scale(0.95);
         }
-        #autoClicker {
+        .autoClicker {
             position: absolute;
             width: 50px;
             height: 50px;
-            display: none;
+            pointer-events: none;
         }
         .upgrade-area {
             display: flex;
@@ -65,7 +65,7 @@
         }
         .upgrade-btn {
             padding: 10px;
-            background-color: #4CAF50;
+            background-color: #008CBA;
             color: white;
             border: none;
             cursor: pointer;
@@ -77,7 +77,6 @@
         <div id="score">점수: 0</div>
         <div class="button-area">
             <button id="clickButton">클릭!</button>
-            <img id="autoClicker" src="autoclicker.gif" alt="Auto Clicker">
         </div>
         <div class="upgrade-area">
             <button id="upgradeClickPower" class="upgrade-btn">클릭 파워 업그레이드 (비용: 10)</button>
@@ -88,12 +87,12 @@
     <script>
         let score = 0;
         let clickPower = 1;
-        let autoClickerActive = false;
+        let autoClickers = [];
+        const maxAutoClickers = 10;
         const scoreDisplay = document.getElementById('score');
         const clickButton = document.getElementById('clickButton');
         const upgradeClickPowerBtn = document.getElementById('upgradeClickPower');
         const upgradeAutoClickerBtn = document.getElementById('upgradeAutoClicker');
-        const autoClicker = document.getElementById('autoClicker');
         const buttonArea = document.querySelector('.button-area');
 
         clickButton.addEventListener('click', () => {
@@ -110,11 +109,9 @@
         });
 
         upgradeAutoClickerBtn.addEventListener('click', () => {
-            if (score >= 30 && !autoClickerActive) {
+            if (score >= 30 && autoClickers.length < maxAutoClickers) {
                 score -= 30;
-                autoClickerActive = true;
-                autoClicker.style.display = 'block';
-                startAutoClicker();
+                addAutoClicker();
                 updateScore();
             }
         });
@@ -123,30 +120,38 @@
             scoreDisplay.textContent = `점수: ${score}`;
         }
 
-        function startAutoClicker() {
-            let angle = 0;
-            const radius = 120; // GIF 크기에 맞게 반경 조정
+        function addAutoClicker() {
+            const autoClicker = document.createElement('img');
+            autoClicker.className = 'autoClicker';
+            autoClicker.src = 'https://media.giphy.com/media/3ohhwytHcusSCXXOUg/giphy.gif'; // 여기에 실제 GIF URL을 넣으세요
+            buttonArea.appendChild(autoClicker);
+
+            const angle = (autoClickers.length / maxAutoClickers) * 2 * Math.PI;
+            const radius = 150; // 원의 반지름
+            autoClickers.push({ element: autoClicker, angle });
+
+            positionAutoClicker(autoClicker, angle, radius);
+            startAutoClicker(autoClicker, angle, radius);
+        }
+
+        function positionAutoClicker(element, angle, radius) {
             const centerX = buttonArea.offsetWidth / 2;
             const centerY = buttonArea.offsetHeight / 2;
+            const x = centerX + radius * Math.cos(angle) - element.offsetWidth / 2;
+            const y = centerY + radius * Math.sin(angle) - element.offsetHeight / 2;
+            element.style.left = `${x}px`;
+            element.style.top = `${y}px`;
+        }
 
-            function moveAutoClicker() {
-                const x = centerX + radius * Math.cos(angle) - autoClicker.offsetWidth / 2;
-                const y = centerY + radius * Math.sin(angle) - autoClicker.offsetHeight / 2;
-                autoClicker.style.left = `${x}px`;
-                autoClicker.style.top = `${y}px`;
+        function startAutoClicker(element, startAngle, radius) {
+            let angle = startAngle;
+            setInterval(() => {
                 angle += 0.02;
-                if (angle > 2 * Math.PI) {
-                    angle -= 2 * Math.PI;
-                }
-            }
-
-            function autoClick() {
+                if (angle > 2 * Math.PI) angle -= 2 * Math.PI;
+                positionAutoClicker(element, angle, radius);
                 score += clickPower;
                 updateScore();
-            }
-
-            setInterval(moveAutoClicker, 20);
-            setInterval(autoClick, 1000);
+            }, 1000);
         }
 
         updateScore();
