--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         // 이전 변수 선언 유지
 
         // GIF URL을 GitHub raw content URL로 변경
-        const autoClickerGifUrl = 'https://raw.githubusercontent.com/사용자명/저장소명/main/autoclicker.gif';
+        const autoClickerGifUrl = 'https://github.com/dhflxkdajrwk/clickerGif/blob/main/autoclicker.gif';
 
         function addAutoClicker() {
             const autoClicker = document.createElement('img');
