--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         const buttonArea = document.querySelector('.button-area');
 
         // GitHub의 raw 파일 URL을 사용하세요. 아래 URL을 실제 GIF 파일의 URL로 교체해주세요.
-        const autoClickerGifUrl = 'https://github.com/dhflxkdajrwk/clickerGif/blob/main/autoclicker.gif';
+        const autoClickerGifUrl = 'autoclicker.gif';
 
         clickButton.addEventListener('click', () => {
             score += clickPower;
