--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         const upgradeAutoClickerBtn = document.getElementById('upgradeAutoClicker');
         const buttonArea = document.querySelector('.button-area');
 
-        const autoClickerGifUrl = 'https://github.com/your-username/your-repo/raw/main/autoclicker.gif';
+        const autoClickerGifUrl = 'autoclicker.gif';
 
         clickButton.addEventListener('click', () => {
             score += clickPower;
