--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         const buttonArea = document.querySelector('.button-area');
 
         // 실제 GIF URL로 교체해주세요
-        const autoClickerGifUrl = 'https://example.com/path/to/your/autoclicker.gif';
+        const autoClickerGifUrl = 'autoclicker.gif';
 
         clickButton.addEventListener('click', () => {
             score += clickPower;
