--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
     <audio id="backgroundMusic" loop>
-        <source src="https://example.com/path/to/your/music.mp3" type="audio/mpeg">
+        <source src="music.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
@@ -124,7 +124,7 @@
         const backgroundMusic = document.getElementById('backgroundMusic');
 
         // 실제 GIF URL로 교체해주세요
-        const autoClickerGifUrl = 'Music1.mp3';
+        const autoClickerGifUrl = 'autoclicker.gif';
 
         // 배경 음악 설정
         backgroundMusic.volume = 0.5;
